added a clock and a reminder time

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="alert">
                 Add item
             </div>
+            <span id="clock"></span>
             <form id="form">
                 <h5>ToDo List</h5>
                 <input id="inputItem" type="text" placeholder="Insert Item...">
